syntax = "proto3";

package users;

service UsersService {
  rpc FindOne (UserRequest) returns (UserResponse) {}
}

message UserRequest {
  string id = 1;
}

message UserResponse {
  string id = 1;
  string email = 2;
  string firstName = 3;
  string lastName = 4;
}
